Bug 195046 - "presentation" mode does not exit when WM causes gwenview to leave full-screen mode
Summary: "presentation" mode does not exit when WM causes gwenview to leave full-scree...
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-06-03 01:38 UTC by Matthew Woehlke
Modified: 2018-02-09 12:40 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matthew Woehlke 2009-06-03 01:38:04 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

When using the WM to exit full-screen mode, Gwenview does not leave "presentation" mode (its internal full-screen mode), resulting in an all-black-except-the-image window with WM decorations.

(Gwenview also doesn't switch /to/ presentation mode when made full-screen by the WM, although this arguably a feature, as it is conceivable to want to use thumbnail mode with Gwenview occupying the entire screen. A "presentation: thumbnails" mode might be a solution?)

See also http://permalink.gmane.org/gmane.comp.kde.devel.kwin/22284.

To reproduce:
- start Gwenview's full-screen/presentation mode
- press alt-f3 to get kwin's context menu, go to "Advanced" and deactivate "Fullscreen"
- Gwenview is still in "presentation" mode
Comment 1 Myriam Schweingruber 2013-04-03 14:17:07 UTC
Is this still valid on the latest KDE 4.10.x?
Comment 2 Matthew Woehlke 2013-04-03 15:19:09 UTC
Yes; can still reproduce in 4.10.1. (@Myriam, can you really *not* reproduce? It should be trivial to see this on any system...)
Comment 3 Holger 2013-11-27 23:53:36 UTC
This also applies, when you restart KDE and there was a gwenview instance running in presentation-mode. KDE will ressurect gwenview, but it won't look as you left.
Comment 4 Nate Graham 2017-09-09 04:38:21 UTC
How about with KF5 versions?
Comment 5 Matthew Woehlke 2017-09-11 14:07:58 UTC
Just checked with 16.12.3; still present.

Also, switching to fullscreen changes which screen gwenview is on... (gwenview bug? or kwin bug?)
Comment 6 Nate Graham 2017-09-11 14:14:29 UTC
Thanks for the info! Not sure if that other issue is the fault of Gwenview or Kwin. Might try filing one on KWin and the maintainer will send it here if it's not KWin's fault.
Comment 7 Matthew Woehlke 2017-09-11 14:24:22 UTC
Thanks. Addendum: I think I've seen the second behavior with krdc also, which would tend to implicate kwin...
Comment 8 null 2017-12-10 20:20:23 UTC
Unintentional changing which screen Gwenview is on is tracked in Bug 372417, let's not confuse this one even more.

Next, there are two only slightly related issues here:

1. KWin's and Gwenview's fullscreen mode not linked properly
(see link to the kwin-devel thread)

This should be fixed for both going into and out of fullscreen mode with either Alt+F3 or F11. Let's track this bug here.

Note there's a small caveat: Gwenview does not support fullscreen mode for the "Start Page".

BTW, we do have a fullscreen thumbnail mode (now?).

2. Session restore not working correctly for a fullscreen Gwenview.

Let's track this in Bug Unintentional changing which screen Gwenview is on is tracked in Bug 372417, let's not confuse this one even more.

Next, there are two only slightly related issues here:

1. KWin's and Gwenview's fullscreen mode not linked properly
(see link to the kwin-devel thread)

This should be fixed for both going into and out of fullscreen mode with either Alt+F3 or F11. Let's track this bug here.

Note there's a small caveat: Gwenview does not support fullscreen mode for the "Start Page".

BTW, we do have a fullscreen thumbnail mode (now?).

2. Session restore not working correctly for a fullscreen Gwenview.
Let's track this in Bug 387782.
Comment 9 null 2017-12-10 20:22:25 UTC
Copy and paste error, sorry for that. Here is how I intended it:

---

Unintentional changing which screen Gwenview is on is tracked in Bug 372417, let's not confuse this one even more.

Next, there are two only slightly related issues here:

1. KWin's and Gwenview's fullscreen mode not linked properly
(see link to the kwin-devel thread)

This should be fixed for both going into and out of fullscreen mode with either Alt+F3 or F11. Let's track this bug here.

Note there's a small caveat: Gwenview does not support fullscreen mode for the "Start Page".

BTW, we do have a fullscreen thumbnail mode (now?).

2. Session restore not working correctly for a fullscreen Gwenview.

Let's track this in Bug 387782.
Comment 10 Peter Mühlenpfordt 2018-02-09 12:40:47 UTC
Git commit 0d917337122fcc02270586effa99997df881a32d by Peter Mühlenpfordt.
Committed on 09/02/2018 at 12:40.
Pushed by muhlenpfordt into branch 'master'.

Keep Gwenview fullscreen mode in sync with window manager

Summary:
Toggling fullscreen mode in Gwenview does not reflect in window manager
and vice versa.
This patch changes toggling fullscreen mode from `setWindowState()` to
`KToggleFullScreenAction::setFullScreen()` as the api doc recommends.

Test Plan:
Start Gwenview in windowed or fullscreen mode and toggle by window
manager, e.g. {nav Alt+F3 > More Actions > Fullscreen}.
Use other tools to toggle Gwenview's fullscreen mode:
```
kstart --fullscreen gwenview image.jpg
wmctrl -i -r <WINID> -b add,fullscreen
wmctrl -i -r <WINID> -b remove,fullscreen
```

Reviewers: rkflx, ngraham

Reviewed By: rkflx

Subscribers: broulik

Differential Revision: https://phabricator.kde.org/D10360

M  +9    -10   app/mainwindow.cpp

https://commits.kde.org/gwenview/0d917337122fcc02270586effa99997df881a32d