Keep Gwenview fullscreen mode in sync with window manager

Summary:
Toggling fullscreen mode in Gwenview does not reflect in window manager
and vice versa.
This patch changes toggling fullscreen mode from `setWindowState()` to
`KToggleFullScreenAction::setFullScreen()` as the api doc recommends.

BUG: 195046

Test Plan:
Start Gwenview in windowed or fullscreen mode and toggle by window
manager, e.g. {nav Alt+F3 > More Actions > Fullscreen}.
Use other tools to toggle Gwenview's fullscreen mode:
```
kstart --fullscreen gwenview image.jpg
wmctrl -i -r <WINID> -b add,fullscreen
wmctrl -i -r <WINID> -b remove,fullscreen
```

Reviewers: rkflx, ngraham

Reviewed By: rkflx

Subscribers: broulik

Differential Revision: https://phabricator.kde.org/D10360